<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Catch Spy</string>
    <string name="imageview_collapsing_toolbar_head">Head image</string>
    <string name="player_number">Player Number:</string>
    <string name="player_number_spy">Spy Number:</string>
    <string name="player_number_white_board">White Board Number:</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="imageview_app_icon">Application Icon</string>
    <string name="application_version">Version:</string>
    <string name="application_author">Author:</string>
    <string name="author">XFY9326</string>
    <string name="application_thank_list">Thanks to all the people who has helped me.</string>
    <string name="open_source_license">Open Source License</string>
    <string name="copyright">Copyright © 2017 XFY9326.\nAll rights reserved.</string>
    <string name="website" translatable="false">https://github.com/XFY9326/CatchSpy</string>
    <string name="permission_request_error">Permission request error!</string>
    <string name="permission_warn">Permission Warning</string>
    <string name="permission_warn_explanation">The application need this permission to work properly!</string>
    <string name="action_warn_double_click_close_application">Double click to close application.</string>
    <string name="show_press_button_to_show">Please press the button to show your word.</string>
    <string name="show_press_button_next">Please press the button and pass this phone to next one.</string>
    <string name="player">Player</string>
    <string name="white_board">White Board</string>
    <string name="data_error">Data Error!</string>
    <string name="show_no_click_back">When showing words, you can\'t click back button!</string>
    <string name="show_press_button_to_guess">Please press the button to start guess!</string>
    <string name="show_words">Show Words</string>
    <string name="spy">Spy</string>
    <string name="normal">Civilian</string>
    <string name="identify">Identify:</string>
    <string name="word">Word:</string>
    <string name="win_normal">The civilian win!</string>
    <string name="win_spy">The spy win!</string>
    <string name="win_msg">Click Done to start a new game.</string>
    <string name="later">Later</string>
    <string name="click_to_guess">Click the list to guess who is Spy</string>
    <string name="replay">Replay</string>
    <string name="guess_show_all">Show all</string>
    <string name="player_num_error">Player number is wrong!</string>
    <string name="guess">Guess</string>
    <string name="guess_no_click_back">You can\'t click back when guessing!</string>
    <string name="exit_game">Exit game</string>
    <string name="settings_general">General</string>
    <string name="settings_general_max_player">Max player number</string>
    <string name="settings_general_max_white_board">Max white board number</string>
    <string name="settings_general_auto_win">Show winner automatically</string>
    <string name="settings_general_max_player_sum">Set the max number of player. (Default:20)</string>
    <string name="settings_general_max_white_board_sum">Set the max number of white board. (Default 2)</string>
    <string name="settings_general_auto_win_sum">Will show winner alert if you open it.</string>
    <string name="diy_words">DIY Words</string>
    <string name="diy_words_open">Use DIY Words</string>
    <string name="diy_words_error">DIY Words are wrong or not set!</string>
    <string name="diy_words_spy">Spy Word:</string>
    <string name="diy_words_normal">Civilian Word:</string>
    <string name="settings_extra_words_use_extra_words">Use extra words</string>
    <string name="settings_extra_words_use_extra_words_sum">Use extra words to play game.</string>
    <string name="settings_extra_words_only_use_extra_words">Pure extra words mode</string>
    <string name="settings_extra_words_only_use_extra_words_sum">Only use extra words to play game.</string>
    <string name="settings_extra_words">Extra Dictionary</string>
    <string name="settings_extra_words_import">Import extra words</string>
    <string name="settings_extra_words_import_sum">Use custom rules to import words text</string>
    <string name="settings_extra_words_edit">Edit extra words</string>
    <string name="settings_extra_words_edit_sum">Edit extra dictionary file.</string>
    <string name="settings_extra_words_combine">Combine different words file</string>
    <string name="settings_extra_words_combine_sum">Combine and delete existed words</string>
    <string name="settings_extra_words_use">Select extra words</string>
    <string name="settings_extra_words_use_sum">Select extra words you want to use</string>
    <string name="settings_extra_words_check_exist">Check existed extra words</string>
    <string name="settings_extra_words_check_exist_sum">Check and delete existed extra words in one dictionary</string>
    <string name="settings_extra_words_delete_dictionary">Delete dictionary</string>
    <string name="settings_extra_words_delete_dictionary_sum">Select and delete one extra dictionary</string>
    <string name="settings_extra_words_error">Extra Words is empty!</string>
    <string name="settings_extra_words_combine_error">Please select at least two dictionaries!</string>
    <string name="settings_extra_words_combine_failed">Dictionaries combine failed!</string>
    <string name="loading">Loading &#8230; &#8230;</string>
    <string name="settings_extra_words_combine_success">Dictionaries combine success!</string>
    <string name="default_new_dictionary_name">New Dictionary</string>
    <string name="settings_extra_words_check_finish">Check finished!</string>
    <string name="default_dictionary">Not Set</string>
    <string name="settings_extra_words_rename_dictionary">Rename dictionary</string>
    <string name="settings_extra_words_rename_dictionary_sum">Select and rename one extra dictionary</string>
    <string name="settings_extra_words_rename_dictionary_success">Rename dictionary success!</string>
    <string name="settings_extra_words_rename_dictionary_failed">Rename dictionary failed!</string>
    <string name="settings_extra_words_import_divider_group">Group divider</string>
    <string name="settings_extra_words_import_divider_words">Words divider</string>
    <string name="settings_extra_words_import_ignore_change_line">Ignore changing lines when matching</string>
    <string name="import_name">Name new dictionary</string>
    <string name="import_name_error">Name input error!</string>
    <string name="import_file_select_error">File select error!</string>
    <string name="import_file">Import file</string>
    <string name="import_words_divider_error">Group divider not found!</string>
    <string name="import_group_divider_error">Words divider not found!</string>
    <string name="import_file_error">File import error!</string>
    <string name="import_output_error">File output error!</string>
    <string name="import_success">Import success!</string>
    <string name="import_divider_error">Divider set error!</string>
    <string name="delete_success">Delete success!</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="delete">Delete</string>
    <string name="edit_word_zero">Word 1</string>
    <string name="edit_word_one">Word 2</string>
    <string name="edit_extra_words">Edit Extra Words</string>
    <string name="edit_extra_words_error">Extra Words set error!</string>
    <string name="edit_extra_words_attention">Click the list to edit each group of words.</string>
    <string name="attention">Attention</string>
    <string name="exit">Exit</string>
    <string name="edit_exit_warn">If you want to save these changes, please click Done!</string>
    <string name="edit_save_success">Changes save success!</string>
    <string name="edit_save_failed">Changes save failed!</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="settings_extra_words_not_set">Extra Words not set!</string>
    <string name="settings_extra_words_add">Add a new dictionary</string>
    <string name="settings_extra_words_add_sum">Add a new custom dictionary</string>
    <string name="settings_extra_words_add_error">Add dictionary failed!</string>
    <string name="import_advanced">Advanced Import</string>
    <string name="import_advanced_group_match">Group regular expression</string>
    <string name="import_advanced_word_match">Word regular expression</string>
    <string name="import_advanced_group_match_error">Group regular expression error!</string>
    <string name="import_advanced_word_match_error">Word regular expression error!</string>
    <string name="settings_extra_words_load">Load Extra Words</string>
    <string name="settings_extra_words_load_sum">Load other extra dictionary from local file</string>
    <string name="settings_extra_words_load_success">Load Success!</string>
    <string name="settings_extra_words_load_failed">Load Failed!</string>
    <string name="settings_extra_words_manage">Extra Dictionary Manage</string>
    <string name="settings_extra_words_manage_sum">Add and edit extra dictionary.</string>
    <string name="settings_extra_words_manage_add">Add new dictionary</string>
    <string name="settings_extra_words_manage_edit">Edit dictionary</string>
    <string name="settings_extra_words_manage_advanced">Advanced functions</string>
    <string name="settings_general_white_board_not_first">White board not first</string>
    <string name="settings_general_white_board_not_first_sum">The first player will not be white board.</string>
    <string name="game_rule">Game Rule</string>
    <string name="player_name_change_title">Previous custom player name exist!</string>
    <string name="player_name_change_content">Delete this custom player name?</string>
    <string name="skip">Skip</string>
    <string name="settings_general_notify_player_name_delete">Notify delete custom player name</string>
    <string name="settings_general_notify_player_name_delete_sum">Not auto delete custom player name.</string>
</resources>
