<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_general">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="AUTO_SHOW_WINNER"
            android:summary="@string/settings_general_auto_win_sum"
            android:title="@string/settings_general_auto_win" />

        <Preference
            android:key="MAX_PLAYER_NUMBER"
            android:summary="@string/settings_general_max_player_sum"
            android:title="@string/settings_general_max_player" />

        <Preference
            android:key="MAX_PLAYER_BOARD_NUMBER"
            android:summary="@string/settings_general_max_white_board_sum"
            android:title="@string/settings_general_max_white_board" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_extra_words">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="USE_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_use_extra_words_sum"
            android:title="@string/settings_extra_words_use_extra_words" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="USE_EXTRA_WORDS"
            android:key="ONLY_USE_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_only_use_extra_words_sum"
            android:title="@string/settings_extra_words_only_use_extra_words" />

        <Preference
            android:key="SELECT_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_use_sum"
            android:title="@string/settings_extra_words_use" />

        <Preference
            android:key="IMPORT_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_import_sum"
            android:title="@string/settings_extra_words_import" />

        <Preference
            android:key="LOAD_LOCAL_DICTIONARY"
            android:summary="@string/settings_extra_words_load_sum"
            android:title="@string/settings_extra_words_load" />

        <Preference
            android:key="ADD_NEW_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_add_sum"
            android:title="@string/settings_extra_words_add" />

        <Preference
            android:key="EDIT_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_edit_sum"
            android:title="@string/settings_extra_words_edit" />

        <Preference
            android:key="RENAME_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_rename_dictionary_sum"
            android:title="@string/settings_extra_words_rename_dictionary" />

        <Preference
            android:key="DELETE_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_delete_dictionary_sum"
            android:title="@string/settings_extra_words_delete_dictionary" />

        <Preference
            android:key="COMBINE_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_combine_sum"
            android:title="@string/settings_extra_words_combine" />

        <Preference
            android:key="CHECK_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_check_exist_sum"
            android:title="@string/settings_extra_words_check_exist" />

    </PreferenceCategory>

</PreferenceScreen>