<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_extra_words_manage">

        <Preference
            android:key="SELECT_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_use_sum"
            android:title="@string/settings_extra_words_use" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_extra_words_manage_add">

        <Preference
            android:key="ADD_NEW_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_add_sum"
            android:title="@string/settings_extra_words_add" />

        <Preference
            android:key="LOAD_LOCAL_DICTIONARY"
            android:summary="@string/settings_extra_words_load_sum"
            android:title="@string/settings_extra_words_load" />

        <Preference
            android:key="IMPORT_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_import_sum"
            android:title="@string/settings_extra_words_import" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_extra_words_manage_edit">

        <Preference
            android:key="EDIT_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_edit_sum"
            android:title="@string/settings_extra_words_edit" />

        <Preference
            android:key="RENAME_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_rename_dictionary_sum"
            android:title="@string/settings_extra_words_rename_dictionary" />

        <Preference
            android:key="DELETE_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_delete_dictionary_sum"
            android:title="@string/settings_extra_words_delete_dictionary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_extra_words_manage_advanced">

        <Preference
            android:key="COMBINE_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_combine_sum"
            android:title="@string/settings_extra_words_combine" />

        <Preference
            android:key="CHECK_EXTRA_WORDS"
            android:summary="@string/settings_extra_words_check_exist_sum"
            android:title="@string/settings_extra_words_check_exist" />

    </PreferenceCategory>

</PreferenceScreen>