<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_import_advanced"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_import_advanced_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/import_advanced_group_match" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_import_advanced_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/import_advanced_word_match" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_import_advanced_ignore_change_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/settings_extra_words_import_ignore_change_line" />

</LinearLayout>