<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_content_num_height"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/player_number"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/spinner_main_player_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_content_num_height"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/player_number_spy"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/spinner_main_player_number_spy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_content_num_height"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/player_number_white_board"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/spinner_main_player_number_white_board"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_diy_words"
                android:layout_width="0dp"
                android:layout_height="@dimen/main_content_settings_height"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                app:cardCornerRadius="4dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_diy"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/diy_words" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/main_content_settings_height"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                app:cardCornerRadius="4dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true">

                <CheckBox
                    android:id="@+id/checkbox_diy_words"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/diy_words_open"
                    android:textColor="@color/colorSecondary_Text" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_settings"
                android:layout_width="0dp"
                android:layout_height="@dimen/main_content_settings_height"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                app:cardCornerRadius="4dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_settings"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/settings" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_about"
                android:layout_width="0dp"
                android:layout_height="@dimen/main_content_settings_height"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                app:cardCornerRadius="4dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_about"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/about" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>